add readme to galaxy.yml
Signed-off-by: Adam Miller <admiller@redhat.com>

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -31,3 +31,5 @@ documentation: 'https://github.com/ansible-security/splunk_enterprise_security'
 homepage: 'https://github.com/ansible-security/splunk_enterprise_security'
 # issue tracker url
 issues: 'https://github.com/ansible-security/splunk_enterprise_security/issues'
+
+readme: README.md
