--- a/galaxy.yml
+++ b/galaxy.yml
@@ -4,7 +4,7 @@ namespace: splunk
 # the designation of this specific collection
 name: enterprise_security
 # semantic versioning compliant version designation
-version: 0.0.3
+version: 0.0.4
 # a list of the collection's content authors: 'Full Name <email> (http://site) @nicks:irc/im/site#channel'
 authors:
   - 'Ansible Security Automation Team (https://github.com/ansible-security)'
@@ -24,12 +24,12 @@ tags:
 
 ### urls
 # url of originating SCM repository
-repository: 'https://github.com/ansible-security/splunk_enterprise_security'
+repository: 'https://github.com/ansible-security/ansible_collections.splunk.enterprise_security'
 # url to online docs
-documentation: 'https://github.com/ansible-security/splunk_enterprise_security'
+documentation: 'https://github.com/ansible-security/ansible_collections.splunk.enterprise_security'
 # homepage of the collection/project
-homepage: 'https://github.com/ansible-security/splunk_enterprise_security'
+homepage: 'https://github.com/ansible-security/ansible_collections.splunk.enterprise_security'
 # issue tracker url
-issues: 'https://github.com/ansible-security/splunk_enterprise_security/issues'
+issues: 'https://github.com/ansible-security/ansible_collections.splunk.enterprise_security/issues'
 
 readme: README.md
